--- a/RecipeApp/style.css
+++ b/RecipeApp/style.css
@@ -25,10 +25,10 @@ body {
     display: flex;
     outline: none; 
     height: 50px;
-    justify-content: center;
     align-items: center;
     margin-bottom: 30px;
     border-radius: 30px;
+    position: relative;
 }
 
 #search-form input {
@@ -42,11 +42,10 @@ body {
 
 #search-button {
     border-radius: 30px;
-    border: none;
+    border-color: rgb(9, 9, 28);
     height: 50px;
-    width: 120px;
-    background-image: linear-gradient(180deg,rgba(255,247,47,1),rgba(255,170,40,1));
-    color: #341919;
+    width: 100px;
+    background-color: rgba(132, 188, 132, 0.712);
     cursor: pointer;
     box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.25);
     margin-left: 5px;
@@ -54,7 +53,7 @@ body {
 
 #results {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 24px;
 }
@@ -94,7 +93,7 @@ body {
     border-radius: 10px;
     margin-top: 20px;
     width: 60vw;
-    background-color: #333333;
+    background-color: rgb(132, 188, 132);
 }
 
 #recipe-content {
@@ -114,24 +113,24 @@ body {
 }
 
 #recipe-content::-webkit-scrollbar-thumb {
-    background-color: #595454;
+    background-color: #5b5656;
     border-radius: 10px;
 }
 
 #recipe-content::-webkit-scrollbar-track {
-    background: #9b9999;
+    background: #9a9797;
     border-radius: 5px;
 }
 
 #recipe-content::-webkit-scrollbar-thumb:hover {
-    background: #6f6e6e;
+    background: #696868;
 }
 
 #statusBar {
     display: flex;
     justify-content: end;
     align-items: center;
-    background-color: #545447;
+    background-color: rgb(9, 9, 28);
     height: 2vh;
     padding: 10px;
     border-top-left-radius: 5px;
@@ -160,19 +159,21 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    justify-content: center;
 }
 
 #suggestions-container {
     position: absolute;
-    background-color: white;
-    border: 1px solid #ccc;
-    width: calc(30vw + 20px); 
+    width: 100%; 
+    max-width: 30vw;
     max-height: 200px;
     overflow-y: auto;
     z-index: 100;
+    background-color: white;
+    border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: none; 
+    display: none;
 }
 
 .suggestion-item {
@@ -184,6 +185,15 @@ body {
     background-color: #f0f0f0;
 }
 
-#search-form {
-    position: relative;
+@media (max-width: 999px) {
+    .recipe-item {
+        width: 170px;
+    }
 }
+
+@media (max-width: 600px) {
+    .recipe-item {
+        width: 150px;
+    }
+}
+
